Refactor index.js to obfuscate password handling and improve logging. Update HTML files to reference minified JavaScript version, enhancing load performance. Modify .gitignore to exclude original index.js while allowing minified files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Hide original JavaScript files (keep minified/obfuscated versions)
-index.js
+index-original.js
 particles.js
 image-optimizer.js
 test-deploy.js
 
 # Hide build files and development artifacts
-*.min.js
+# *.min.js (commented out to allow minified files)
 build.js
 node_modules/
 webpack.config.js
